tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@macro_default_non_literal_in_array.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/macro_default_non_literal_in_array.txt
---
 Syntax error --> [macro_default_non_literal_in_array.txt:1:21]
  |
1 | {% macro array(array=[a]) %}{% endmacro %}
  |                      ^---
  = Invalid default argument: this array should only contain literal values.
